THRIFT-2435 Java compiler doesn't like struct member names that are identical to an existing enum or struct type Client: java Patch: Jens Geyer